Castor.Engine.Host/src/castor_engine.h

    CASTOR_ENGINE_API uint32_t castor_engine_get_abi_version(void);
    CASTOR_ENGINE_API const char* castor_engine_get_obs_version(void);
    CASTOR_ENGINE_API const char* castor_engine_get_version(void);
    typedef enum castor_engine_result
    {
        CASTOR_ENGINE_OK = 0,
        CASTOR_ENGINE_INVALID_ARGUMENT = 1,
        CASTOR_ENGINE_INVALID_RUNTIME = 2,
        CASTOR_ENGINE_OBS_STARTUP_FAILED = 3,
        CASTOR_ENGINE_MODULE_LOAD_FAILED = 4,
        CASTOR_ENGINE_NOT_INITIALIZED = 5,

        CASTOR_ENGINE_VIDEO_NOT_SUPPORTED = 6,
        CASTOR_ENGINE_VIDEO_INVALID_CONFIGURATION = 7,
        CASTOR_ENGINE_VIDEO_CURRENTLY_ACTIVE = 8,
        CASTOR_ENGINE_VIDEO_MODULE_NOT_FOUND = 9,
        CASTOR_ENGINE_VIDEO_CONFIGURATION_FAILED = 10,
        CASTOR_ENGINE_VIDEO_NOT_CONFIGURED = 11,

        CASTOR_ENGINE_AUDIO_UNSUPPORTED_SAMPLE_RATE = 12,
        CASTOR_ENGINE_AUDIO_UNSUPPORTED_SPEAKER_LAYOUT = 13,
        CASTOR_ENGINE_AUDIO_ALREADY_CONFIGURED = 14,
        CASTOR_ENGINE_AUDIO_CONFIGURATION_FAILED = 15,

        CASTOR_ENGINE_SCENE_CREATION_FAILED = 16,
        CASTOR_ENGINE_SCENE_SOURCE_UNAVAILABLE = 17,
        CASTOR_ENGINE_SCENE_SOURCE_CREATION_FAILED = 18,
        CASTOR_ENGINE_SCENE_SOURCE_ADD_FAILED = 19,
        CASTOR_ENGINE_SCENE_ACTIVATION_FAILED = 20,

        CASTOR_ENGINE_VIDEO_ENCODER_UNKNOWN_ID = 21,
        CASTOR_ENGINE_VIDEO_ENCODER_UNAVAILABLE = 22,
        CASTOR_ENGINE_VIDEO_ENCODER_ALREADY_CONFIGURED = 23,
        CASTOR_ENGINE_VIDEO_ENCODER_CREATION_FAILED = 24,

        CASTOR_ENGINE_AUDIO_NOT_CONFIGURED = 25,
        CASTOR_ENGINE_AUDIO_ENCODER_ALREADY_CONFIGURED = 26,
        CASTOR_ENGINE_AUDIO_ENCODER_UNAVAILABLE = 27,
        CASTOR_ENGINE_AUDIO_ENCODER_CREATION_FAILED = 28,

        CASTOR_ENGINE_RECORDING_NO_ACTIVE_SCENE = 29,
        CASTOR_ENGINE_RECORDING_HARDWARE_ENCODER_NOT_ALLOWED = 30,
        CASTOR_ENGINE_RECORDING_ALREADY_ACTIVE = 31,
        CASTOR_ENGINE_RECORDING_NOT_ACTIVE = 32,
        CASTOR_ENGINE_RECORDING_INVALID_DESTINATION = 33,
        CASTOR_ENGINE_RECORDING_OUTPUT_UNAVAILABLE = 34,
        CASTOR_ENGINE_RECORDING_OUTPUT_CREATION_FAILED = 35,
        CASTOR_ENGINE_RECORDING_START_FAILED = 36,

        CASTOR_ENGINE_DISPLAY_INVALID_CONFIGURATION = 37,
        CASTOR_ENGINE_DISPLAY_NOT_FOUND = 38,
        CASTOR_ENGINE_DISPLAY_SOURCE_UNAVAILABLE = 39,
        CASTOR_ENGINE_DISPLAY_SOURCE_CREATION_FAILED = 40,
        CASTOR_ENGINE_DISPLAY_SOURCE_ADD_FAILED = 41,
        CASTOR_ENGINE_DISPLAY_NO_ACTIVE_SCENE = 42,
        CASTOR_ENGINE_DISPLAY_RECONFIGURATION_WHILE_RECORDING = 43,

        CASTOR_ENGINE_STREAMING_INVALID_CONFIGURATION = 44,
        CASTOR_ENGINE_STREAMING_NOT_CONFIGURED = 45,
        CASTOR_ENGINE_STREAMING_SERVICE_UNAVAILABLE = 46,
        CASTOR_ENGINE_STREAMING_OUTPUT_UNAVAILABLE = 47,
        CASTOR_ENGINE_STREAMING_SERVICE_CREATION_FAILED = 48,
        CASTOR_ENGINE_STREAMING_OUTPUT_CREATION_FAILED = 49,
        CASTOR_ENGINE_STREAMING_ENCODERS_NOT_CONFIGURED = 50,
        CASTOR_ENGINE_STREAMING_NO_ACTIVE_SCENE = 51,
        CASTOR_ENGINE_STREAMING_ALREADY_ACTIVE = 52,
        CASTOR_ENGINE_STREAMING_NOT_ACTIVE = 53,
        CASTOR_ENGINE_STREAMING_RECONFIGURATION_WHILE_ACTIVE = 54,
        CASTOR_ENGINE_STREAMING_CONFLICTING_OUTPUT_ACTIVE = 55,
        CASTOR_ENGINE_STREAMING_START_FAILED = 56,
        CASTOR_ENGINE_STREAMING_CONNECTION_FAILED = 57,
        CASTOR_ENGINE_STREAMING_STREAM_REJECTED = 58,
        CASTOR_ENGINE_STREAMING_DISCONNECTED = 59,
        CASTOR_ENGINE_STREAMING_RECONNECT_EXHAUSTED = 60,
        CASTOR_ENGINE_STREAMING_UNSUPPORTED = 61,
        CASTOR_ENGINE_STREAMING_ENCODER_ERROR = 62,
        CASTOR_ENGINE_STREAMING_STOP_TIMEOUT = 63,
        CASTOR_ENGINE_STREAMING_OUTPUT_ERROR = 64,
        CASTOR_ENGINE_DISPLAY_RECONFIGURATION_WHILE_STREAMING = 65,

        CASTOR_ENGINE_SCENE_INVALID_NAME = 66,
        CASTOR_ENGINE_SCENE_ALREADY_EXISTS = 67,
        CASTOR_ENGINE_SCENE_NOT_FOUND = 68,
        CASTOR_ENGINE_SCENE_DELETE_ACTIVE_SCENE = 69,
        CASTOR_ENGINE_SCENE_TRANSITION_UNAVAILABLE = 70,
        CASTOR_ENGINE_SCENE_TRANSITION_CREATION_FAILED = 71,
        CASTOR_ENGINE_SCENE_TRANSITION_START_FAILED = 72,
    } castor_engine_result_t;
    typedef struct castor_engine_config
    {
        uint32_t struct_size;
        const char* runtime_root;
        const char* locale;
    } castor_engine_config_t;
    CASTOR_ENGINE_API castor_engine_result_t castor_engine_initialize(const castor_engine_config_t* config);
    CASTOR_ENGINE_API void castor_engine_shutdown(void);
    CASTOR_ENGINE_API uint8_t castor_engine_is_initialized(void);